--- a/hefesto-j2ee8/src/main/resources/messages_pt_BR.properties
+++ b/hefesto-j2ee8/src/main/resources/messages_pt_BR.properties
@@ -1,9 +1,9 @@
-main.app.title=Sistema de Gest\u00E3o de bens im\u00F3veis
-main.app.welcome=Bem-vindo \u00E0 aplica\u00E7\u00E3o de Gest\u00E3o de bens im\u00F3veis.
-main.nenhum.registro=Nenhum registro encontrado.
+main.app.title=Hefeto
+main.app.welcome=Welcome to the system.
+main.none.register=No records found.
 
-texto_confirmacao_exclusao=Confirma exclus\u00E3o?
-titulo_confirmacao=Confirma\u00E7\u00E3o
+texto_confirmacao_exclusao=Confirm deletion?
+titulo_confirmacao=Confirmation
 
 build.version=${project.version}
 build.timestamp=${timestamp}
