Completed Menu page.

--- a/hefesto-spring-bootstrap/src/main/resources/messages_en_US.properties
+++ b/hefesto-spring-bootstrap/src/main/resources/messages_en_US.properties
@@ -5,9 +5,9 @@ lang.change=Change the language
 lang.en_US=English
 lang.pt_BR=Portuguese
 
-main.framework=HFS Framework
-main.app.title=Administrative Client Web
-main.app.welcome=Welcome to HFS Framework Administrative Client Web.
+main.framework=Hefesto
+main.app.title=System
+main.app.welcome=Welcome to Hefesto System.
 main.no.record=No records found.
 
 validator.EmptyStringValidator=The field can not be empty!
@@ -154,7 +154,10 @@ editAdmParameter.value=Value:
 
 listAdmMenu.title=Manage Menu
 editAdmMenu.title=Manage Menu
-editAdmMenu.name=Name:
+editAdmMenu.page=Page:
+editAdmMenu.description=Menu item name:
+editAdmMenu.menuParent=Parent Menu:
+editAdmMenu.order=Order:
 
 listAdmPage.title=Manage Page
 editAdmPage.title=Manage Page
