--- a/hefesto-spring-bootstrap/src/main/resources/messages_pt_BR.properties
+++ b/hefesto-spring-bootstrap/src/main/resources/messages_pt_BR.properties
@@ -5,9 +5,9 @@ lang.change=Alterar o idioma
 lang.en_US=Ingl\u00EAs
 lang.pt_BR=Portugu\u00EAs
 
-main.framework=HFS Framework
-main.app.title=Administrative Client Web
-main.app.welcome=Bem-vindo ao HFS Framework Administrative Client Web.
+main.framework=Hefesto
+main.app.title=System
+main.app.welcome=Bem-vindo ao Hefesto System.
 main.no.record=Nenhum registro encontrado.
 
 validator.EmptyStringValidator=O campo não pode estar vazio!
@@ -154,7 +154,10 @@ editAdmParameter.value=Valor:
 
 listAdmMenu.title=Administrar Menu
 editAdmMenu.title=Administrar Menu
-editAdmMenu.name=Nome:
+editAdmMenu.page=P\u00E1gina:
+editAdmMenu.description=Nome do item de menu:
+editAdmMenu.menuParent=Menu pai:
+editAdmMenu.order=Ordem:
 
 listAdmPage.title=Administrar P\u00E1gina
 editAdmPage.title=Administrar P\u00E1gina
