--- a/hefesto-spring-bootstrap/src/main/resources/messages_en_US.properties
+++ b/hefesto-spring-bootstrap/src/main/resources/messages_en_US.properties
@@ -164,8 +164,8 @@ editAdmPage.title=Manage Page
 editAdmPage.url=Page:
 editAdmPage.description=Description:
 editAdmPage.pickListProfiles=Page Profiles:
-editAdmPage.sourceCaptionRoles=Available
-editAdmPage.targetCaptionRoles=Selected
+editAdmPage.sourceCaptionProfiles=Available
+editAdmPage.targetCaptionProfiles=Selected
 
 listAdmProfile.title=Manage Profile
 editAdmProfile.title=Manage Profile
@@ -174,6 +174,8 @@ editAdmProfile.sourceCaptionUsers=Available
 editAdmProfile.targetCaptionUsers=Selected
 editAdmProfile.sourceCaptionPages=Available
 editAdmProfile.targetCaptionPages=Selected
+editAdmProfile.pickListUsers=Profile Users:
+editAdmProfile.pickListPages=Profile Pages:
 
 listVwAdmLog.title=Audit Log
 editVwAdmLog.title=Audit Log
