--- a/hefesto-spring-bootstrap/src/main/resources/messages_pt_BR.properties
+++ b/hefesto-spring-bootstrap/src/main/resources/messages_pt_BR.properties
@@ -164,8 +164,8 @@ editAdmPage.title=Administrar P\u00E1gina
 editAdmPage.url=P\u00E1gina:
 editAdmPage.description=Descri\u00E7\u00E3o:
 editAdmPage.pickListProfiles=Perfil(s) da P\u00E1gina:
-editAdmPage.sourceCaptionRoles=Dispon\u00EDveis
-editAdmPage.targetCaptionRoles=Selecionados
+editAdmPage.sourceCaptionProfiles=Dispon\u00EDveis
+editAdmPage.targetCaptionProfiles=Selecionados
 
 listAdmProfile.title=Administrar Perfil
 editAdmProfile.title=Administrar Perfil
@@ -174,6 +174,8 @@ editAdmProfile.sourceCaptionUsers=Dispon\u00EDveis
 editAdmProfile.targetCaptionUsers=Selecionados
 editAdmProfile.sourceCaptionPages=Dispon\u00EDveis
 editAdmProfile.targetCaptionPages=Selecionados
+editAdmProfile.pickListUsers=Usu\u00E1rio(s) do Perfil:
+editAdmProfile.pickListPages=P\u00E1gina(s) do Perfil:
 
 listVwAdmLog.title=Log de Auditoria
 editVwAdmLog.title=Log de Auditoria
