created user page

--- a/hefesto-spring-bootstrap/src/main/resources/messages_en_US.properties
+++ b/hefesto-spring-bootstrap/src/main/resources/messages_en_US.properties
@@ -177,6 +177,13 @@ editAdmProfile.targetCaptionPages=Selected
 editAdmProfile.pickListUsers=Profile Users:
 editAdmProfile.pickListPages=Profile Pages:
 
+listAdmUser.title=Users
+editAdmUser.title=User
+editAdmUser.login=Login:
+editAdmUser.name=Name:
+editAdmUser.email=E-mail:
+editAdmUser.active=Active
+
 listVwAdmLog.title=Audit Log
 editVwAdmLog.title=Audit Log
 editVwAdmLog.name=Name:
