--- a/hefesto-spring-bootstrap/src/main/resources/messages_pt_BR.properties
+++ b/hefesto-spring-bootstrap/src/main/resources/messages_pt_BR.properties
@@ -177,6 +177,12 @@ editAdmProfile.targetCaptionPages=Selecionados
 editAdmProfile.pickListUsers=Usu\u00E1rio(s) do Perfil:
 editAdmProfile.pickListPages=P\u00E1gina(s) do Perfil:
 
+listAdmUser.title=Usu\u00E1rios
+editAdmUser.title=Usu\u00E1rio
+editAdmUser.login=Login:
+editAdmUser.name=Nome:
+editAdmUser.email=E-mail:
+editAdmUser.active=Ativo
 listVwAdmLog.title=Log de Auditoria
 editVwAdmLog.title=Log de Auditoria
 editVwAdmLog.name=Nome:
