Pagination components works!

--- a/hefesto-spring-bootstrap/src/main/resources/messages_en_US.properties
+++ b/hefesto-spring-bootstrap/src/main/resources/messages_en_US.properties
@@ -78,6 +78,7 @@ changePasswordView.notEqual=New password and confirm password do not match!
 changePasswordView.currentPwdNotEqual=Current password does not match.
 changePasswordView.checkFields=Check the fields!
 changePasswordView.passwordChanged=Password changed!
+changePasswordView.validatePassword=The current password does not meet the security criteria.
 
 menu.sessionExpires=Sess\u00E3o expira:
 menu.administrative=Administrative
