--- a/hefesto-spring-bootstrap/src/main/resources/messages_pt_BR.properties
+++ b/hefesto-spring-bootstrap/src/main/resources/messages_pt_BR.properties
@@ -78,6 +78,7 @@ changePasswordView.notEqual=Senha nova e confirma senha n\u00E3o conferem!
 changePasswordView.currentPwdNotEqual=Senha atual n\u00E3o confere.
 changePasswordView.checkFields=Verifique os campos!
 changePasswordView.passwordChanged=Senha alterada!
+changePasswordView.validatePassword=A senha atual n\u00E3o atende aos crit\u00E9rios de seguran\u00E7a.
 
 menu.sessionExpires=Session expires:
 menu.administrative=Administrativo
